# android-vulkan-tutorials

./: README.md
app/: build.gradle
app/src/androidTest/java/com/byteflow/vkapp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/glsl/computeshader/: edgedetect.comp  texture.vert
app/src/main/assets/shaders/glsl/cubemap/: texture.frag  texture.vert
app/src/main/assets/shaders/glsl/depthtesting/: texture.frag
app/src/main/assets/shaders/glsl/inputattachments/: shader1.frag  shader2.frag  shader2.vert
app/src/main/assets/shaders/glsl/instancing/: instancing.frag  instancing.vert
app/src/main/assets/shaders/glsl/multithreading/: multithreading.frag  multithreading.vert
app/src/main/assets/shaders/glsl/offscreenrendering/: offscreen.frag  screen.frag  screen.vert
app/src/main/assets/shaders/glsl/pipelines/: hsv.frag  texture.frag
app/src/main/assets/shaders/glsl/pushconstants/: pushconstants.frag  pushconstants.vert
app/src/main/assets/shaders/glsl/specializationinfo/: texture.frag  texture.vert
app/src/main/assets/shaders/glsl/stenciltesting/: outline.vert  texture.frag
app/src/main/assets/shaders/glsl/texture/: texture.frag
app/src/main/assets/shaders/glsl/ubo/: ubo.frag  ubo.vert
app/src/main/assets/shaders/glsl/yuv/: i420.frag  i420.vert  nv21.frag  yuyv.frag
app/src/main/cpp/: CMakeLists.txt  JniImpl.cpp
app/src/main/cpp/base/: CMakeLists.txt  cmake_install.cmake
app/src/main/cpp/examples/: VkSample01_Triangle.cpp  VkSample01_Triangle.h  VkSample02_Ubo.cpp  VkSample02_Ubo.h  VkSample03_TextureMapping.cpp  VkSample03_TextureMapping.h  VkSample04_Pipelines.cpp  VkSample04_Pipelines.h  VkSample05_PushConstants.cpp  VkSample05_PushConstants.h  VkSample06_RenderNV21.cpp  VkSample06_RenderNV21.h  VkSample07_RenderI420.cpp  VkSample07_RenderI420.h  VkSample08_RenderYUYV.cpp  VkSample08_RenderYUYV.h  VkSample09_RenderI444.cpp  VkSample09_RenderI444.h  VkSample10_SpecializationInfo.cpp  VkSample10_SpecializationInfo.h  VkSample11_CubeMap.cpp  VkSample11_CubeMap.h  VkSample12_InputAttachments.cpp  VkSample12_InputAttachments.h  VkSample13_OffScreenRendering.cpp  VkSample13_OffScreenRendering.h  VkSample14_DepthTesting.cpp  VkSample14_DepthTesting.h  VkSample15_StencilTesting.cpp  VkSample15_StencilTesting.h  VkSample16_MultiSampling.cpp  VkSample16_MultiSampling.h  VkSample17_MultiThreading.cpp  VkSample17_MultiThreading.h  VkSample18_Instancing.cpp  VkSample18_Instancing.h  VkSample19_ReadPixels.cpp  VkSample19_ReadPixels.h  VkSample20_ComputeShader.cpp  VkSample20_ComputeShader.h  (+1 more)
app/src/main/cpp/render/: VkRenderContext.cpp  VkRenderContext.h
app/src/main/cpp/util/: ImageDef.h
app/src/main/cpp/wrapper/: VulkanAndroid.cpp  VulkanAndroid.h  VulkanDebug.cpp  VulkanDevice.cpp  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanTexture.cpp  VulkanTexture.h  VulkanglTFModel.cpp  VulkanglTFModel.h  threadpool.hpp  vulkanexamplebase.cpp  vulkanexamplebase.h
app/src/main/java/com/byteflow/vkapp/: AutoFitView.java  CommonUtils.java  GLAutoFitView.java  GLRenderer.java  JniImpl.java  MainActivity.java  VkRenderer.java
app/src/main/java/com/byteflow/vkapp/adapter/: MyRecyclerViewAdapter.java
app/src/main/java/com/byteflow/vkapp/audio/: AudioCollector.java
app/src/main/java/com/byteflow/vkapp/egl/: EGLActivity.java  NativeEglRender.java
app/src/main/res/layout/: activity_egl.xml  activity_main.xml
app/src/main/res/menu/: menu_egl.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/byteflow/vkapp/: ExampleUnitTest.java
